Removed home from url(Facing login issues if I remove # from url, will do next time) Don’t show create search agent after login Show error message in case of no business found

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -154,7 +154,7 @@
 
   gtag('config', 'G-SR252ETTY4');
 </script>
-
+<base href="/">
 </head>
 <body ng-app="myApp">
 <div id="main">
@@ -180,8 +180,8 @@
           <div class="col-4 col-md-4 col-sm-4">
             <h5 subheadline>Contact</h5>
             <ul class="list-unstyled">
-              <li><a href="#termsOfService">Terms of Service</a></li>
-              <li><a href="#privacyPolicy">Privacy Policy</a></li>
+              <li><a href="#terms_of_service">Terms of Service</a></li>
+              <li><a href="#privacy_policy">Privacy Policy</a></li>
               <li><a href="#contact_us">Contact Us</a></li>
             </ul>
           </div>
@@ -200,7 +200,7 @@
     <h6><small>&copy; 2020 BizRealWorth&trade; Dedicated to help Small and Medium size businesses all over US.</small></h6>
   </div>
 </footer>
-<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true" id="termsOfService">
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true" id="terms_of_service">
     <div class="modal-dialog modal-full" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -215,7 +215,7 @@
         </div>
     </div>
 </div>
-<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true" id="privacyPolicy">
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true" id="privacy_policy">
     <div class="modal-dialog modal-full" role="document">
         <div class="modal-content">
             <div class="modal-header">
