--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -21,10 +21,10 @@
             </a>
             <div class="dropdown-menu">
                 <a href="#search_business_for_sell" class="dropdown-item">Search Business to Buy</a>
-                <a href="#postBuy" class="dropdown-item">Post Buy Requirements</a>
+                <a href="#post_buy" class="dropdown-item">Post Buy Requirements</a>
                 <a href="#business_buying_guidance" class="dropdown-item">Business Buying Guidance</a>
                 <a href="#find_value_of_business" class="dropdown-item">Find the RealWorth of Business you planning to Buy</a>
-                <a href="#searchAgents" class="dropdown-item">Find Business Service Providers to help Buy</a>
+                <a href="#search_agents" class="dropdown-item">Find Business Service Providers to help Buy</a>
 		<a href="#contact_us" class="dropdown-item">Apply for Business Loan or Line of Credit</a>
             </div>
         </li>
@@ -38,7 +38,7 @@
             <a href="#sell_a_business" class="dropdown-item">Sell a business</a>
             <a href="#business_selling_guidance" class="dropdown-item">Business Selling Guidance</a>
             <a href="#find_value_of_business" class="dropdown-item">Find the RealWorth of your Business</a>
-            <a href="#searchAgents" class="dropdown-item">Find Business Service Providers to help Sell</a>
+            <a href="#search_agents" class="dropdown-item">Find Business Service Providers to help Sell</a>
         </div>
     </li>
     </ul>
@@ -48,7 +48,7 @@
                 Owners
             </a>
             <div class="dropdown-menu">
-                <a href="#claimYourBusiness" class="dropdown-item">Claim your Business</a>
+                <a href="#claim_your_business" class="dropdown-item">Claim your Business</a>
                 <a href="#find_value_of_business" class="dropdown-item">How much is my Business RealWorth?</a>
                 <a href="#contact_us" class="dropdown-item">How do I increase RealWorth of my Business?</a>
                 <a href="#contact_us" class="dropdown-item">My Business is in trouble!</a>
@@ -58,15 +58,15 @@
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#searchAgents" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#search_agents" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Business Service Providers
         </a>
           <div class="dropdown-menu">
-          	<a href="#searchAgents" class="dropdown-item">Search Business Service Providers</a>
+          	<a href="#search_agents" class="dropdown-item">Search Business Service Providers</a>
                 <a href="#contact_us" class="dropdown-item">Register as Business Broker</a>
-                <a href="#registerAsBSPs" class="dropdown-item">Register as Business Appraiser</a>
+                <a href="#register_as_bsps" class="dropdown-item">Register as Business Appraiser</a>
                 <a href="#contact_us" class="dropdown-item">Register as Business Attorney</a>
-                <a href="#registerAsBSPs" class="dropdown-item">Register as M&A Advisor</a>
+                <a href="#register_as_bsps" class="dropdown-item">Register as M&A Advisor</a>
                 <a href="#contact_us" class="dropdown-item">Advertise with BizRealWorth</a>
             </div>
       </li>
@@ -81,9 +81,9 @@
           <span class="user-image" style="background-image:url({{ profile.picture }});"></span>
         </a>
         <div class="dropdown-menu">
-			<a class="dropdown-item" href="#myProfile">Profile</a>
-			<!-- <a class="dropdown-item" href="#accountSettings/changePassword">Account Settings</a> -->
-			<!-- <a class="dropdown-item" href="#membershipPayment/membership">Membership & Payements</a> -->
+			<a class="dropdown-item" href="#my_profile">Profile</a>
+			<!-- <a class="dropdown-item" href="#account_settings/changePassword">Account Settings</a> -->
+			<!-- <a class="dropdown-item" href="#membership_payment/membership">Membership & Payements</a> -->
             <a class="dropdown-item"  href="#" ng-click="authService.logout()">Log out</a>
         </div>
       </li>
@@ -91,7 +91,7 @@
       	<a class="nav-link nav-btn" ng-click="authService.login()">Log In</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link nav-btn" href="#business/addListing">
+          <a class="nav-link nav-btn" href="#business/add_listing">
               <span>
                   <i class="fa fa-plus" aria-hidden="true"></i>
                   Add Business
