Removed city field from Subscription

--- a/src/main/resources/static/resources/pages/createSearchAgentModal.html
+++ b/src/main/resources/static/resources/pages/createSearchAgentModal.html
@@ -4,7 +4,7 @@
 
             <!-- Modal Header -->
             <div class="modal-header">
-                <h4 class="modal-title">Save search business subscription</h4>
+                <h4 class="modal-title">Save your subscription preferences</h4>
                 <button type="button" class="close" data-ng-click="skipSearchAgent()" data-dismiss="modal">&times;</button>
             </div>
 
@@ -61,11 +61,11 @@
 <!--                                    id="businessCity">-->
 <!--                            </select>-->
 <!--                        </div>-->
-                        <div class="col-md-6 col-lg-6 col-xl-6">
-                            <label style="margin:0">City</label>
-                            <input type="text" class="form-control form-control-md" name="businessCity" ng-model="businessCity"
-                                   id="businessCity">
-                        </div>
+<!--                         <div class="col-md-6 col-lg-6 col-xl-6"> -->
+<!--                            <label style="margin:0">City</label> -->
+<!--                            <input type="text" class="form-control form-control-md" name="businessCity" ng-model="businessCity" -->
+<!--                                   id="businessCity"> -->
+<!--                        </div> -->
                         <div class="col-md-6 col-lg-6 col-xl-6">
                             <label style="margin:0">Price Range</label>
                             <select class="form-control form-control-md" name="priceRange" ng-model="priceRange"
