Added FAQ Links

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -180,6 +180,10 @@
           <div class="col-4 col-md-4 col-sm-4">
             <h5 subheadline>Contact</h5>
             <ul class="list-unstyled">
+	      <li><a href="#general_faq">General BRW FAQ</a></li>
+	      <li><a href="#service_fees_faq">Service Fees FAQ</a></li>
+	      <li><a href="#buyers_faq">Buyer's FAQ</a></li>
+	      <li><a href="#sellers_faq">Seller's FAQ</a></li>
               <li><a href="#terms_of_service">Terms of Service</a></li>
               <li><a href="#privacy_policy">Privacy Policy</a></li>
               <li><a href="#contact_us">Contact Us</a></li>
@@ -197,7 +201,7 @@
     </div>
   </div>
   <div style="text-align:center;border:1px solid red;">
-    <h6><small>&copy; 2020 BizRealWorth&trade; Dedicated to help Small and Medium size businesses all over US.</small></h6>
+    <h6><small>&copy; 2020 BizRealWorth&trade; Conceived and Dedicated to help Small and Medium size businesses all over US.</small></h6>
   </div>
 </footer>
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true" id="terms_of_service">
