--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -26,6 +26,7 @@
                 <a href="#find_value_of_business" class="dropdown-item">Find the RealWorth of Business you planning to Buy</a>
                 <a href="#search_agents" class="dropdown-item">Find Business Service Providers to help Buy</a>
 		<a href="#contact_us" class="dropdown-item">Apply for Business Loan or Line of Credit</a>
+		<a href="#buyers_faq" class="dropdown-item">Buer's FAQ</a>
             </div>
         </li>
     </ul>
@@ -39,6 +40,7 @@
             <a href="#business_selling_guidance" class="dropdown-item">Business Selling Guidance</a>
             <a href="#find_value_of_business" class="dropdown-item">Find the RealWorth of your Business</a>
             <a href="#search_agents" class="dropdown-item">Find Business Service Providers to help Sell</a>
+	    <a href="#sellers_faq" class="dropdown-item">Sellers's FAQ</a>
         </div>
     </li>
     </ul>
