--- a/src/main/resources/static/resources/pages/about_us.html
+++ b/src/main/resources/static/resources/pages/about_us.html
@@ -106,7 +106,7 @@ h2 h6 {
     Trade Marked Artificial Intelligence and Machine Learning algorithms to determine the RealWorth&trade; of 
     the Business!</p>
     
-    <p>This service is launched on 05/10/2020, in the midst of COVID-19 when humanity is struggling to fight the 
+    <p>This service is launched in the month of May 2020, in the midst of COVID-19 when humanity is struggling to fight the 
     pandemic. As part of the recovery from this situation one of the most significant steps governments all over the 
     US are taking is to substantially help Small Business Community. This is an acknowledgement of SMB as a backbone 
     of Financial as well as Social fabric of American Way of Life! Human ingenuity ultimately always prevails these 
