--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -242,7 +242,7 @@
              style="background-color:#eeeeeee3;margin:0px;display:block;">
             <div class="heading">
                 <h5 style="color:black;padding:10px 50px 10px 50px;">
-                    Sign up for our newsletter and get business tips for success and industry news delivered straight to your inbox.
+                    Subscribe to get emails with 'For Sell' Business Listings.
                 </h5>
             </div>
             <form name="subscribeBusiness" ng-controller="homeController" ng-submit="subscribeSubmitted = true" novalidate>
@@ -270,5 +270,4 @@
             </form>
         </div>
     </div>
-
 </div>
