Color red on Business details for businesses which are on Sale

--- a/src/main/resources/static/resources/pages/businessDetails.html
+++ b/src/main/resources/static/resources/pages/businessDetails.html
@@ -94,7 +94,7 @@
                                     <div class="col-lg-6 col-xl-6">
                                         <div class="card shadow">
                                             <div class="card-header" role="tab" ng-if="businessDetails.isForSell === 'Y'">
-                                                <h4 class="panel-title">For sale</h4>
+                                                <h4 class="panel-title" style="color:red">For sale</h4>
                                             </div>
                                             <div id="specification" class="panel-collapse collapse show" role="tabpanel">
                                                 <div class="card-body" ng-if="businessDetails.isForSell === 'Y'">
