--- a/src/main/resources/static/resources/pages/about_us.html
+++ b/src/main/resources/static/resources/pages/about_us.html
@@ -47,7 +47,7 @@ h2 h6 {
     both business buyers as well as sellers and also speed up turn around time for business buy/sell transactions.</h5>
     
     <h6>www.BizRealWorth.com is striving to be leading trustworthy Business Valuation Platform for Small and Medium size businesses
-    and business community members all over USA.</h6>
+    and business community members all over US.</h6>
     
     <h4>We are primarily focused on serving below groups of audience</h4>
 
