--- a/src/main/resources/static/resources/pages/products_and_services.html
+++ b/src/main/resources/static/resources/pages/products_and_services.html
@@ -69,12 +69,12 @@ h3 h5 h6 {
         <tr>
             <td><b>Plan A - 12 months</b></td>
             <td>Free for 4 months</td>
-            <td><b>$29</b> per month - One time phone payment of <b>$232</b></td>
+            <td><b>$29</b> per month - One time payment of <b>$232</b></td>
         </tr>
         <tr>
             <td><b>Plan B - 6 months</b></td>
             <td>Free for 2 months</td>
-            <td><b>$39</b> per month - One time phone payment of <b>$156</b></td>
+            <td><b>$39</b> per month - One time payment of <b>$156</b></td>
         </tr>
         <tr>
             <td><b>Plan C - 3 months</b></td>
